--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,8 @@
           integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
 </head>
 <body>
+
+<br><br><br>
 <div id="app"></div>
 
 <script defer>
@@ -19,6 +21,7 @@
     GridView.mount(
         {
           tableResponsive: true,
+          tableResponsiveMobile: true,
           id: 'app',
           theadSticky: true,
           tableOptions: {
