remove datamanager added reactive to column and data added sort columns

--- a/public/index.html
+++ b/public/index.html
@@ -32,11 +32,14 @@
               key: 'id',
               type: GridView.TYPE_NUMERIC,
               label: 'ID',
+              sortType: 'asc',
+              sortable: true,
             },
             {
               type: GridView.TYPE_TEXT_SHORT,
               key: 'name',
               label: 'Name',
+              sortType: 'asc'
             },
             {
               type: GridView.TYPE_TEXT_SHORT,
@@ -52,7 +55,7 @@
           data: [
             {id: 1, name: 'John', email: 'john@example.com', phoneNumber: '(353) 01 222 3333'},
             {id: 2, name: 'Mark', email: 'mark@gmail.com', phoneNumber: '(01) 22 888 4444'},
-            {id: 3, name: 'Mark', email: 'mark@gmail.com', phoneNumber: '(01) 22 888 4444'},
+            {id: 3, name: 'Avery', email: 'mark@gmail.com', phoneNumber: '(01) 22 888 4444'},
             {id: 2, name: 'Mark', email: 'mark@gmail.com', phoneNumber: '(01) 22 888 4444'},
             {id: 2, name: 'Mark', email: 'mark@gmail.com', phoneNumber: '(01) 22 888 4444'},
             {id: 2, name: 'Mark', email: 'mark@gmail.com', phoneNumber: '(01) 22 888 4444'},
